# sdk

./: README.md  go.mod  go.sum  version.go
go/: Makefile  README.md
go/auto/: README.md  cmd.go  cmd_test.go  errors.go  errors_test.go  example_test.go  git.go  git_test.go  local_workspace.go  local_workspace_test.go  minimum_version.go  remote_stack.go  remote_workspace.go  remote_workspace_test.go  stack.go  stack_test.go  workspace.go
go/internal/: resource.go  rpc.go  rpc_test.go  state.go  state_test.go  types.go  types_test.go  workgroup.go  workgroup_test.go
go/khulnasoft/: alias.go  alias_test.go  asset.go  callback.go  context.go  context_test.go  internals.go  log.go  mocks.go  printf.go  printf_test.go  provider.go  provider_linked.go  provider_test.go  resource.go  resource_set.go  resource_test.go  rpc.go  rpc_test.go  run.go  run_test.go  stack_reference.go  stack_reference_test.go  transform.go  transformation.go  type_conversions.go  types.go  types_builtins.go  types_builtins_test.go  types_contravariance_test.go  types_test.go  urnset.go
go/khulnasoft-language-go/: go.mod  language_test.go  main.go  main_test.go
nodejs/: .eslintrc.js  Makefile  README.md  biome.json  config.ts  errors.ts  index.ts  invoke.ts  metadata.ts  output.ts  package.json  resource.ts  stackReference.ts  tsutils.ts  typescript-shim.ts  utils.ts  version.ts
python/: Makefile  README.md  mypy.ini  ruff.toml
python/cmd/khulnasoft-language-python/testdata/toml/sdks/config-9.0.0/: pyproject.toml
python/cmd/khulnasoft-language-python/testdata/toml/sdks/config-9.0.0/khulnasoft_config/: __init__.py  _utilities.py  provider.py  resource.py
python/cmd/khulnasoft-language-python/testdata/toml/sdks/large-4.3.2/: pyproject.toml
python/cmd/khulnasoft-language-python/testdata/toml/sdks/large-4.3.2/khulnasoft_large/: __init__.py  provider.py  string.py
python/cmd/khulnasoft-language-python/testdata/toml/sdks/plain-13.0.0/: pyproject.toml
python/cmd/khulnasoft-language-python/testdata/toml/sdks/plain-13.0.0/khulnasoft_plain/: _inputs.py  _utilities.py  provider.py  resource.py
python/cmd/khulnasoft-language-python/testdata/toml/sdks/subpackage-2.0.0/: pyproject.toml
python/cmd/khulnasoft-language-python/testdata/toml/sdks/subpackage-2.0.0/khulnasoft_subpackage/: __init__.py  hello_world.py
(+1615 files in other folders)
