[project]
  name = "khulnasoft_large"
  dependencies = ["parver>=0.2.1", "khulnasoft>=3.136.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11; python_version < \"3.11\""]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "4.3.2"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      khulnasoft_large = ["py.typed", "khulnasoft-plugin.json"]
